# virtualenv

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .hgignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  2749.bugfix.rst  AUTHORS.txt  CONTRIBUTING.rst  HACKING  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  REPO_HAS_MOVED.txt  SECURITY.md  appveyor.yml  azure-pipelines.yml  azure-run-tox-env.yml  binDirWin32  circle.yml  codecov.yaml  codecov.yml  conftest.py  investigate.bash  investigate.csh  investigate.fish  investigate.nu  mine  pip-constraint.txt  pyproject.toml  readthedocs.yml  rebuild-script.py  refresh-support-files.py  regen-docs  setup.cfg  (+5 more)
.appveyor/: install.ps1
.github/: CONTRIBUTING.md  FUNDING.yaml  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  config.yml  release.yaml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  feature-request.md
.github/workflows/: check.yaml  check.yml  inspect.yaml  investigate.yaml  pre-release.yaml  publish.yaml  release.yaml  release.yml  upgrade.yaml
app/: pyoxidizer.bzl
docs/: changelog.rst  changes.rst  cli_interface.rst  conf.py  development.rst  differences_with_venv.rst  explanation.rst  extend.rst  index.rst  index.txt  installation.rst  license.txt  news.rst  news.txt  reference.rst  render_cli.py  useful_links.rst  user_guide.rst  userguide.rst  virtualenv.rst
docs/_static/: custom.css  mermaid-normalize.js  rtd-search.js
docs/_templates/: layout.html
docs/changelog/: 1057.doc.rst  1057.feature.rst  1061.doc.rst  1086.doc.rst  1092.feature.rst  1206.feature.rst  1234.doc.rst  1241.bugfix.rst  1241.deprecation.rst  1244.bugfix.rst  1248.bugfix.rst  1252.feature.rst  1257.feature.rst  1258.feature.rst  1259.deprecation.rst  1259.feature.rst  1273.bugfix.rst  1277.bugfix.rst  1281.bugfix.rst  1282.bugfix.rst  1291.feature.rst  1293.bugfix.rst  1302.bugfix.rst  1303.bugfix.rst  1308.feature.rst  1309.bugfix.rst  1312.feature.rst  1317.bugfix.rst  1321.feature.rst  1330.bugfix.rst  1340.feature.rst  1345.bugfix.rst  1346.feature.rst  1353.breaking.rst  1353.feature.rst  1354.feature.rst  1356.feature.rst  1364.bugfix.rst  1371.feature.rst  1382.bugfix.rst  (+437 more)
docs/how-to/: install.rst  usage.rst
docs/plugin/: api.rst  architecture.rst  how-to.rst  index.rst  tutorial.rst
docs/reference/: api.rst  cli.rst  compatibility.rst
docs/tutorial/: getting-started.rst
news/: _template.rst
src/: virtualenv.py
src/scripts/: virtualenv
src/virtualenv/: __init__.py  __main__.py  dirs.py  error.py  info.py  pyenv_cfg.py  report.py  run.py  session.py  util.py
src/virtualenv_support/: setuptools-40.5.0-py2.py3-none-any.whl  wheel-0.32.2-py2.py3-none-any.whl
support-files/: activate.bat  activate.sh  deactivate.bat  distutils-init.py  ez_setup.py  setuptools-0.6c7-py2.4.egg  setuptools-0.6c7-py2.5.egg  setuptools-0.6c8-py2.4.egg  setuptools-0.6c8-py2.5.egg  setuptools-0.6c9-py2.4.egg  setuptools-0.6c9-py2.5.egg  setuptools-0.6c9-py2.6.egg  site.py
tasks/: __main__zipapp.py  make_zipapp.py  pick_tox_env.py  release.py  update_embedded.py  upgrade_wheels.py
test/: conftest.py
test/unit/: test_util.py
tests/: .test_virtualenv.py.swp  conftest.py  install-test-deps.sh  test_activate.sh  test_activate_expected.output  test_activation.py  test_bootstrap.py  test_cmdline.py  test_from_source.py  test_integration.py  test_prompts.py  test_shells.py  test_source_content.py  test_virtualenv.py  test_zipapp.py  tox.ini  types.py
tests/activation/: conftest.py  test_activate_this.py  test_activation.py  test_fish_activation.py  test_powershell_activation.py  test_prompts.py  test_xonsh_activation.py
tests/flavors/: test_posix.py  test_windows.py
tests/functional/: test_create.py  test_tox.ini
tests/integration/: test_cachedir_tag.py  test_race_condition_simulation.py  test_run_int.py  test_zipapp.py
tests/lib/: __init__.py
tests/shell/: Makefile  roundup  virtualenv-test.sh
tests/unit/: test_core.py  test_dirs.py  test_file_limit.py  test_run.py  test_util.py  test_utils.py
virtualenv/: __about__.py  __init__.py  __main__.py  _compat.py  _system.py  _utils.py  cli.py  core.py
virtualenv/_scripts/: activate_this.py
virtualenv/_wheels/: setuptools-12.0.1-py2.py3-none-any.whl  setuptools-12.0.3-py2.py3-none-any.whl  setuptools-8.3-py2.py3-none-any.whl
virtualenv/builders/: __init__.py  base.py  legacy.py  venv.py
virtualenv/flavors/: base.py  posix.py  windows.py
virtualenv/flavours/: base.py  posix.py  windows.py
virtualenv/system/: posix.py  windows.py
virtualenv_embedded/: FixTk.py  activate.bat  activate.csh  activate.fish  activate.ps1  activate.sh  activate.tcsh  activate.xsh  activate_this.py  deactivate.bat  distribute_setup.py  distutils-init.py  login.bat  login.sh  python-config  site.py
virtualenv_support/: activate.bat  activate.fish  activate.ps1  activate.sh  activate_this.py  deactivate.bat  distribute-0.6-py2.3.egg  distribute-0.6-py2.4.egg  distribute-0.6-py2.5.egg  distribute-0.6-py2.6.egg  distribute_setup.py  distutils-init.py  ez_setup.py  pip-1.5-py2.py3-none-any.whl  pip-1.5.1rc1-py2.py3-none-any.whl  pip-1.5.3-py2.py3-none-any.whl  pip-1.5.5-py2.py3-none-any.whl  pip-1.5.dev1-py2.py3-none-any.whl  pip-1.5rc1-py2.py3-none-any.whl  pip-10.0.0-py2.py3-none-any.whl  pip-18.0-py2.py3-none-any.whl  pip-19.0.1-py2.py3-none-any.whl  pip-19.0.2-py2.py3-none-any.whl  pip-19.1-py2.py3-none-any.whl  pip-19.2-py2.py3-none-any.whl  pip-19.3-py2.py3-none-any.whl  pip-6.0-py2.py3-none-any.whl  pip-6.0.1-py2.py3-none-any.whl  pip-6.0.3-py2.py3-none-any.whl  pip-7.0.2-py2.py3-none-any.whl  pip-7.1.1-py2.py3-none-any.whl  pip-8.1.0-py2.py3-none-any.whl  setuptools-1.4-py2.py3-none-any.whl  setuptools-14.3-py2.py3-none-any.whl  setuptools-18.3.1-py2.py3-none-any.whl  setuptools-18.3.2-py2.py3-none-any.whl  setuptools-18.4-py2.py3-none-any.whl  setuptools-19.1.1-py2.py3-none-any.whl  setuptools-19.6-py2.py3-none-any.whl  setuptools-19.6.1-py2.py3-none-any.whl  (+18 more)
(+335 files in other folders)
